--- a/contacto.html
+++ b/contacto.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sistemsa de registro</title>
+    <title>contacto
+    </title>
 </head>
 <body>
+    <h1>correo: randy_1694@outlook.es
+    </h1>
 </body>
 </html>
